[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scenes/Bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/BulletTurret.gd" type="Script" id=2]
[ext_resource path="res://Sprites/BulletTurret/BulletTurretHeadInactive1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/BulletTurret/BulletTurretHeadInactive2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/BulletTurret/BulletTurretHeadActive8.png" type="Texture" id=5]
[ext_resource path="res://Sprites/BulletTurret/BulletTurretHeadInactive3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/BulletTurret/BulletTurretBase.png" type="Texture" id=7]
[ext_resource path="res://Sprites/BulletTurret/BulletTurretHeadActive2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/BulletTurret/BulletTurretHeadActive4.png" type="Texture" id=9]
[ext_resource path="res://Sprites/BulletTurret/BulletTurretHeadActive1.png" type="Texture" id=10]
[ext_resource path="res://Sprites/BulletTurret/BulletTurretHeadActive3.png" type="Texture" id=11]
[ext_resource path="res://Sprites/BulletTurret/BulletTurretHeadActive5.png" type="Texture" id=12]
[ext_resource path="res://Sprites/BulletTurret/BulletTurretHeadActive6.png" type="Texture" id=13]
[ext_resource path="res://Sprites/BulletTurret/BulletTurretHeadActive7.png" type="Texture" id=14]
[ext_resource path="res://Sprites/BulletTurret/BulletTurretHeadActive10.png" type="Texture" id=15]
[ext_resource path="res://Sprites/BulletTurret/BulletTurretHeadActive9.png" type="Texture" id=16]
[ext_resource path="res://Sprites/BulletTurret/BulletTurretHeadInactive5.png" type="Texture" id=17]
[ext_resource path="res://Sprites/BulletTurret/BulletTurretHeadInactive6.png" type="Texture" id=18]
[ext_resource path="res://Sprites/BulletTurret/BulletTurretHeadInactive9.png" type="Texture" id=19]
[ext_resource path="res://Sprites/BulletTurret/BulletTurretHeadInactive4.png" type="Texture" id=20]
[ext_resource path="res://Sprites/BulletTurret/BulletTurretHeadInactive8.png" type="Texture" id=21]
[ext_resource path="res://Sprites/BulletTurret/BulletTurretHeadInactive7.png" type="Texture" id=22]
[ext_resource path="res://Sprites/BulletTurret/BulletTurretHeadInactive10.png" type="Texture" id=23]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 5 ), ExtResource( 16 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 23 ) ],
"loop": true,
"name": "inactive(active)",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[node name="BulletTurret" type="Node2D" groups=["Solids", "bulletShooters"]]
script = ExtResource( 2 )
bullet_scene = ExtResource( 1 )

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 7 )

[node name="Head" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="DeactivationTimer" type="Timer" parent="."]
one_shot = true

[node name="RC2DParent" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="RC2DParent"]
enabled = true
cast_to = Vector2( 100, 0 )

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=["Solids"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )

[connection signal="timeout" from="DeactivationTimer" to="." method="turn_off"]
